BPER/DEVF/force-app/main/default/objects/CH_Event__c/CH_Event__c.object-meta.xml
<CustomObject>
    <label>CH - Eventi</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CH - Eventi</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CH - Eventi</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>