BPER/DEVF/force-app/main/default/objects/CH_Event__c/fields/CRM_Account__c.field-meta.xml
<CustomField>
    <fullName>CRM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CH - Eventi</relationshipLabel>
    <relationshipName>CH_Eventi</relationshipName>
    <type>Lookup</type>
</CustomField>