BPER/DEVF/force-app/main/default/objects/CH_Event__c/fields/CRM_ReferenteNameFormula__c.field-meta.xml
<CustomField>
    <fullName>CRM_ReferenteNameFormula__c</fullName>
    <formula>CRM_Account__r.PTF_Portafoglio__r.CRM_ReferenteFormula__c</formula>
    <label>Referente</label>
    <type>Text</type>
</CustomField>