BPER/DEVF/force-app/main/default/objects/CH_Event__c/fields/CRM_StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>CRM_StartDateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>StartDateTime</label>
    <type>DateTime</type>
</CustomField>