BPER/DEVF/force-app/main/default/objects/CH_Event__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>